--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,27 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+.seconds{
+    text-align: center;
+    position: absolute;
+    z-index: 2;
+    background-color: rgb(69, 69, 69);
+    font-size: 3rem;
+    color: red;
+    width: 11rem;
+    height: 5rem;
+    border-radius: 10px;
+    margin-top: 26.5rem;
+    margin-left: 58.5rem;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.card{
+    position: relative;
+    z-index: 1;
+    display: flex;
+    width: 70rem;
+    height: 90rem;
+}
 
-*/
+.clock{
+    text-align: center;
+}
